<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context="com.checkmobi.sdk.ui.PinValidationActivity">

    <TextView
            android:text="@string/receive_code_soon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_receive_code_soon"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/CheckmobiUI.EditText"
            android:inputType="phone"
            android:layout_below="@+id/tv_receive_code_soon"
            android:id="@+id/et_pin" />

    <Button
            android:text="@string/button_validate_pin"
            style="@style/CheckmobiUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:id="@+id/bt_validate_pin"
            android:layout_below="@+id/et_pin"
            android:layout_centerHorizontal="true" />

    <TextView
            android:text="@string/did_not_receive_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_did_not_receive_code"
            android:layout_centerInParent="true"
            android:layout_above="@+id/bt_sms_label"
            android:layout_marginBottom="35dp" />

    <Button
            android:text="@string/resend_sms"
            style="@style/CheckmobiUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_sms_label"
            android:layout_above="@+id/bt_call_label"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="26dp" />

    <Button
            android:text="@string/call_me_with_code"
            style="@style/CheckmobiUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:id="@+id/bt_call_label"
            android:layout_above="@+id/bt_missed_call_label"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <Button
            android:text="@string/verify_with_missed_call"
            style="@style/CheckmobiUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_missed_call_label"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="32dp" />

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_sms_time_left"
            android:layout_alignBaseline="@id/bt_sms_label"
            android:layout_toRightOf="@+id/bt_sms_label"
            android:layout_toEndOf="@+id/bt_sms_label"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp" />

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_call_left_time"
            android:layout_alignBaseline="@+id/bt_call_label"
            android:layout_toRightOf="@+id/bt_call_label"
            android:layout_toEndOf="@+id/bt_call_label"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"/>

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_missed_call_time_left"
            android:layout_alignBaseline="@+id/bt_missed_call_label"
            android:layout_toRightOf="@+id/bt_missed_call_label"
            android:layout_toEndOf="@+id/bt_missed_call_label"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp" />

</RelativeLayout>
